Surf-01: fixes styles for hover working while slider is using its overflow property

--- a/src/scss/populargoods-common.scss
+++ b/src/scss/populargoods-common.scss
@@ -23,7 +23,6 @@
 
   .goods-item {
     position: relative;
-    z-index: 1000;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -35,16 +34,21 @@
     transition: all ease-in 0.2s;
 
     &:hover {
-      height: 598px;
-      margin-bottom: -180px;
+      // height: 598px;
+      // margin-bottom: -180px;
       border-color: #DCE5E5;
       transition: all ease-in 0.2s;
+      img {
+        max-height: 180px;
+        transition: all ease-in 0.2s;
+      }
     }
 
     img {
       max-height: 300px;
       margin-top: 25px;
       margin-bottom: 20px;
+      transition: all ease-in 0.2s;
     }
 
     &__title {
@@ -115,13 +119,6 @@
   }
 }
 
-.populargoods-common .slider {
-  &:hover {
-    // overflow-y: visible;
-  }
-  
-}
-
 @media screen and (max-width: 1440px) {
   .populargoods-common {
     &__title {
@@ -151,8 +148,19 @@
         line-height: 33px;
       }
 
+      // &:hover {
+      //   // height: 680px;
+      // }
+
       &:hover {
-        height: 680px;
+        // height: 598px;
+        // margin-bottom: -180px;
+        border-color: #DCE5E5;
+        transition: all ease-in 0.2s;
+        img {
+          max-height: 290px;
+          transition: all ease-in 0.2s;
+        }
       }
     }
   }
@@ -160,8 +168,17 @@
 
 @media screen and (max-width: 992px) {
   .populargoods-common {
+    &__inner {
+      margin: 0 auto;
+    }
+
+    &__goods-list {
+      padding-left: 20px;
+    }
+    
     .goods-item {
-      height: 520px;
+      max-height: 520px;
+      margin-right: 30px;
 
       &__title {
         font-size: 20px;
@@ -186,9 +203,18 @@
 
 @media screen and (max-width: 768px) {
   .populargoods-common {
+    &__inner {
+      width: 280px;
+    }
+
     &__goods-list {
-      flex-direction: column;
-      align-items: center;
+      padding-left: 0px;
+      margin: 0 auto;
+    }
+    
+    .goods-item {
+      height: 520px;
+      margin-right: 0px;
     }
   }
 }
